--- a/3_project.html
+++ b/3_project.html
@@ -16,8 +16,8 @@
         <li>atul</li>
         <ol type="i">
             <li>atul123255</li>
-            <li>vipulrtg</li>
-            <li>ankiytrytrtyrtyt</li>
+            <li>viput</li>
+            <li>ankit</li>
         </ol>
         <li>viputytetyl</li>
         <li>antyeertkit</li>
