--- a/3_project.html
+++ b/3_project.html
@@ -19,8 +19,8 @@
             <li>viput</li>
             <li>ankit</li>
         </ol>
-        <li>viputytetyl</li>
-        <li>antyeertkit</li>
+        <li>vansh</li>
+        <li>ansh</li>
     </ol>
     <ul type="square">
       
